v1.0 - November 27, 2011
* added per-world event control capabilities, so that you can define an event strategy chain that takes place only on a specific world
* added per-permission event control capabilities
* added new "onGroupSpawn" event type so that admins can define custom strategy chains even for /groupspawn
* many new strategies added, see web strategy doc for full details
* strategy "modes" added, which modify how existing strategies work to provide additional flexbility and control
* changed base command permission to no longer need ".use" suffix. ".use" suffix is deprecated but still works for now.
* new strategies required some small DB schema changes, added additional code to make DB upgrade seamless even for SQLite users
* updated configuration to use Bukkit's new preferred YamlConfiguration classes (hopefully no bugs)
* fixed a bug that prevented groupspawn from working properly
* added a "config_defaults.yml" file which will always contain the most current plugin defaults (for admin's reference)
* new user commands added: /homelist, /deletehome, /setdefaulthome, /homeother
* new op commands added: /sethomeother, /homedeleteother

Because of the Bukkit YamlConfiguration upgrade, HSP 1.0 now requires the Bukkit 1.0 dev builds (I've tested on #1493+). Do NOT try to run this on 1.8 #1337, it will not load.

v0.9.1 - November 26, 2011
* fixed bug ticket #10: /groupspawn not working
* fixed bug ticket #11: /spawn NPE (Vault-related)
* fixed bug ticket #12: /home <player> unintentionally working for everyone

v0.9 - November 12, 2011
* new feature: WorldGuard region-spawn support via "spawnWGregion" strategy
* new feature: Economy fees using optional Vault dependency
* new feature: spawnSpecificWorld strategy
* new feature: spawnNamedSpawn strategy
* new command: /setdefaultspawn to allow for defining the default spawn
out of multiple named spawns that might exist in a world
* new feature: usurpCommands - admin can specify commands s/he wants this