@@ -28,15 +28,15 @@ public class SetHome extends BaseCommand
 		
 		if( args.length > 0 ) {
 			if( !args[0].equals(Storage.HSP_BED_RESERVED_NAME) ) {
-				util.setNamedHome(p.getName(), p.getLocation(), args[0], p.getName());
-				util.sendMessage(p, "Home \""+args[0]+"\" set successfully.");
+				if( util.setNamedHome(p.getName(), p.getLocation(), args[0], p.getName()) )
+					util.sendMessage(p, "Home \""+args[0]+"\" set successfully.");
 			}
 			else
 				util.sendMessage(p, "Cannot used reserved name "+Storage.HSP_BED_RESERVED_NAME);
 		}
 		else {
-			util.setHome(p.getName(), p.getLocation(), p.getName(), true, false);
-			util.sendMessage(p, "Default home set successfully.");
+			if( util.setHome(p.getName(), p.getLocation(), p.getName(), true, false) )
+				util.sendMessage(p, "Default home set successfully.");
 		}
 
 		return true;
