@@ -6,6 +6,7 @@ package org.morganm.homespawnplus.config;
 import java.util.List;
 import java.util.Set;
 
+import org.bukkit.configuration.ConfigurationSection;
 import org.morganm.homespawnplus.SpawnStrategy;
 
 /** Our configuration which determines how a number of things about how this mod operates.
@@ -87,6 +88,8 @@ public interface Config {
      * @return list of strings
      */
     public List<String> getStringList(String path, List<String> def);
+    
+    public ConfigurationSection getConfigurationSection(String node);
     
     /** Return the list of permissions that have strategies associated with them.
      * 
