@@ -1,12 +1,13 @@
 # While the comments in here try to be helpful, the most up-to-date
-# documentation for this file can always be found on the web at:
+# documentation for these options can always be found on the web at:
 #
 # 'http://dev.bukkit.org/server-mods/homespawnplus/pages/config-params'
 
-# If you're having problems with other plugins that have registered commands
-# that you want to use with HSP (for example, CommandBook has /home, /spawn
-# and loads first alphabetically), you can uncomment the below lines and
-# HSP will then take over those commands for it's own use when it loads.
+# If you're having problems with other plugins that have registered
+# commands that you want to use with HSP (for example, CommandBook has
+# /home, /spawn and loads first alphabetically), you can uncomment the
+# below lines and HSP will then take over those commands for it's own
+# use when it loads.
 #usurpCommands:
 #  - home
 #  - sethome
@@ -92,7 +93,7 @@ events:
   onGroupSpawnCommand:
     - spawnGroup
 
-  # CURRENTLY NOT USED, to be added in future version
+  # strategies to use when player types "/home"
   onHomeCommand:
     - homeMultiWorld
 
@@ -147,14 +148,33 @@ warmup:
   spawn: 5
   groupspawn: 0
 
-# If you have Vault installed, HSP can use that to charge prices for commands
-# using whatever economy plugin you happen to have installed. Costs will not
-# work if you do not have Vault installed.
+# ability to raise or lower the limit of homes you allow
+# players to have. Can be defined on a per-world or
+# per-permission basis. (-1 = unlimited)
+homeLimits:
+  default:
+    perWorld: 1
+    global: -1
+
+#  world:
+#    myworld:
+#      perWorld: 5
+#  permission:
+#    limit1:
+#      permissions:
+#        - my.custom.perm
+#        - group.mygroup
+#      perWorld: 3
+#      global: 10
+
+# If you have Vault installed, HSP can use that to charge prices for
+# commands using whatever economy plugin you happen to have installed.
+# Costs will not work if you do not have Vault installed.
 #
 # http://dev.bukkit.org/server-mods/vault/
 cost:
-  # if verbose is true, the player will get a message stating that their account
-  # has been charged whenever they use a command with a cost.
+  # if verbose is true, the player will get a message stating that their
+  # account has been charged whenever they use a command with a cost.
   verbose: true
   home: 0
   sethome: 0
